fix(oa-verify-api): Add /healthcheck endpoint
