# tradetrust/open-attestation-verify-api/api.yml
@@ -57,6 +57,16 @@ components:
             properties:
               valid:
                 type: boolean
+    HealthcheckResult:
+      description:
+        Some information about the API version
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              version:
+                type: string
     ValidationFragmentsResult:
       description: >
         Validation fragments result
@@ -68,6 +78,14 @@ components:
               $ref: '#/components/schemas/VerificationFragmentResult'
 
 paths:
+  /healthcheck:
+    get:
+      summary: >
+        Return basic information about the service
+      responses:
+        200:
+          $ref: '#/components/responses/HealthcheckResult'
+
   /verify:
     post:
       summary: >
